--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -470,6 +470,13 @@ on post-fs-data
 #    write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 1026000
 #    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
 
+    # interactive
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
+
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 384000
