--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -455,6 +455,13 @@ on post-fs-data
 #    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 1
 #    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 1
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
+    write /sys/module/msm_thermal/core_control/enabled 0
+
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu2/online 1
+    write /sys/devices/system/cpu/cpu3/online 1
+
+    # ondemand
 #    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "ondemand"
 #    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "ondemand"
 #    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "ondemand"
@@ -491,6 +498,8 @@ on post-fs-data
     write /sys/devices/system/cpu/cpu2/cpufreq/sys_cap_freq 1728000
     write /sys/devices/system/cpu/cpu3/cpufreq/thermal_cap_freq 1728000
     write /sys/devices/system/cpu/cpu3/cpufreq/sys_cap_freq 1728000
+
+    write /sys/module/msm_thermal/core_control/enabled 1
 
 on charger
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
