--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -438,10 +438,10 @@ on post-fs-data
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 1
     write /sys/module/rpm_resources/enable_low_power/vdd_mem 1
-#    write /sys/module/pm_8x60/modes/cpu0/retention/idle_enabled 0
-#    write /sys/module/pm_8x60/modes/cpu1/retention/idle_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu2/retention/idle_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu3/retention/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/retention/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu1/retention/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu2/retention/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu3/retention/idle_enabled 0
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu1/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu2/power_collapse/suspend_enabled 1
@@ -450,10 +450,10 @@ on post-fs-data
     write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/suspend_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 1
-#    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 0
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
     write /sys/module/msm_thermal/core_control/enabled 0
 
