Update adsprpc config from codeaurora
N/A

Change-Id: I84cebe353a8e3980e470a590cf4d1d46b7141f31
Signed-off-by: huangqiwu <huangqiwu@xiaomi.com>

--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -316,6 +316,11 @@ on boot
     chown root system /sys/devices/system/cpu/mfreq
     chmod 220 /sys/devices/system/cpu/mfreq
 
+    #fastrpc permission setting
+    insmod /system/lib/modules/adsprpc.ko
+    chown system.system /dev/adsprpc-smd
+    chmod 666 /dev/adsprpc-smd
+
     start qcamerasvr
 
 # import cne init file
