--- a/configs/init.aries.rc
+++ b/configs/init.aries.rc
@@ -443,10 +443,14 @@ on post-fs-data
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 1
     write /sys/module/rpm_resources/enable_low_power/vdd_mem 1
-    write /sys/module/pm_8x60/modes/cpu0/retention/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu1/retention/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu2/retention/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu3/retention/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu0/retention/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu1/retention/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu2/retention/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu3/retention/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu0/retention/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu1/retention/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu2/retention/suspend_enabled 1
+    write /sys/module/pm_8x60/modes/cpu3/retention/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu1/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu2/power_collapse/suspend_enabled 1
@@ -455,11 +459,14 @@ on post-fs-data
     write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 0
-    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 0
+    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 1
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu1/power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu2/power_collapse/idle_enabled 1
+    write /sys/module/pm_8x60/modes/cpu3/power_collapse/idle_enabled 1
     write /sys/module/msm_thermal/core_control/enabled 0
 
     write /sys/devices/system/cpu/cpu1/online 1
@@ -561,7 +568,7 @@ service cnd /system/bin/cnd
     socket cnd stream 666 root radio
 
 service rmt_storage /system/bin/rmt_storage
-    class core
+    class main
     user root
 
 on property:ro.boot.emmc=true
