wcnss: system permission to WCNSS platform device
wcnss service runs with system permission, and it needs to interact with
wcnss platform driver thru this device.

Signed-off-by: 秋叶随风Ivan <yanziily@gmail.com>
Change-Id: I6dbf14d9e3134cbaf724699040eac083cb680dc7
CRs-Fixed: 458741

--- a/configs/ueventd.qcom.rc
+++ b/configs/ueventd.qcom.rc
@@ -136,6 +136,9 @@
 /dev/ks_hsic_bridge       0660   system     system
 /dev/efs_hsic_bridge      0660   system     system
 
+# wlan
+/dev/wcnss_wlan           0660   system     system
+
 /sys/devices/system/cpu/cpufreq ondemand/boostfreq   0664    system  system
 /sys/devices/system/cpu/cpufreq ondemand/boostpulse  0664    system  system
 /sys/devices/system/cpu/cpufreq ondemand/boosttime   0664    system  system
