Revert to stock
N/A

Change-Id: I65802467c1391094597bfd196cc95e45f00e371b
Signed-off-by: huangqiwu <huangqiwu@xiaomi.com>

--- a/configs/init.qcom.rc
+++ b/configs/init.qcom.rc
@@ -222,105 +222,6 @@ on boot
     chown system system /sys/devices/system/cpu/cpu3/online
     chmod 0664 /sys/devices/system/cpu/cpu3/online
 
-    # interactive governor
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_rate
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/timer_rate
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/boost
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/input_boost
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/input_boost
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/boostpulse_duration
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
-    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/io_is_busy
-
-    # ondemand governor
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/boostfreq
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/boostfreq
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/boosttime
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/down_differential
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/down_differential
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/powersave_bias
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/powersave_bias
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
-    chmod 0660 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sync_freq
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load
-    chown system system /sys/devices/system/cpu/cpufreq/ondemand/input_boost
-    chown 0660 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core
-    chown 0660 /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq
-    chown 0660 /sys/devices/system/cpu/cpufreq/ondemand/sync_freq
-    chown 0660 /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load
-    chown 0660 /sys/devices/system/cpu/cpufreq/ondemand/input_boost
-
-    # Assume SMP uses shared cpufreq policy for all CPUs
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-
-    # allow system to modify cpufreq control files
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-
-    chown system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chown system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-    chown system /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq
-    chown system /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq
-    chown system /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq
-    chown system /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq
-    chown system /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq
-    chown system /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq
-
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/thermal_cap_freq
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/sys_cap_freq
-
-    chown system system /sys/devices/system/cpu/cpu1/cpufreq/thermal_cap_freq
-    chown system.system /sys/devices/system/cpu/cpu1/cpufreq/sys_cap_freq
-
-    chown system system /sys/devices/system/cpu/cpu2/cpufreq/thermal_cap_freq
-    chown system system /sys/devices/system/cpu/cpu2/cpufreq/sys_cap_freq
-
-    chown system system /sys/devices/system/cpu/cpu3/cpufreq/thermal_cap_freq
-    chown system system /sys/devices/system/cpu/cpu3/cpufreq/sys_cap_freq
-
-    chown system system /dev/cpuctl/apps/cpu.notify_on_migrate
-    chmod 0644 /dev/cpuctl/apps/cpu.notify_on_migrate
-
-    chown root system /sys/devices/system/cpu/mfreq
-    chmod 220 /sys/devices/system/cpu/mfreq
-
-    #fastrpc permission setting
-    insmod /system/lib/modules/adsprpc.ko
-    chown system.system /dev/adsprpc-smd
-    chmod 666 /dev/adsprpc-smd
-
     start qcamerasvr
 
 # import cne init file
@@ -437,81 +338,6 @@ on post-fs-data
     mkdir /data/tombstones/lpass 0771 system system
     mkdir /data/tombstones/wcnss 0771 system system
     mkdir /data/tombstones/dsps 0771 system system
-
-    # Enable Power modes and set the CPU Freq Sampling rates
-    write /sys/module/rpm_resources/enable_low_power/L2_cache 1
-    write /sys/module/rpm_resources/enable_low_power/pxo 1
-    write /sys/module/rpm_resources/enable_low_power/vdd_dig 1
-    write /sys/module/rpm_resources/enable_low_power/vdd_mem 1
-    write /sys/module/pm_8x60/modes/cpu0/retention/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/retention/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/retention/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/retention/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/retention/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/retention/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/retention/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/retention/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/suspend_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/standalone_power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/standalone_power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/standalone_power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/standalone_power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu1/power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu2/power_collapse/idle_enabled 1
-    write /sys/module/pm_8x60/modes/cpu3/power_collapse/idle_enabled 1
-    write /sys/module/msm_thermal/core_control/enabled 0
-
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu2/online 1
-    write /sys/devices/system/cpu/cpu3/online 1
-
-    # ondemand
-#    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "ondemand"
-#    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "ondemand"
-#    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "ondemand"
-#    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "ondemand"
-#    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
-#    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 50000
-#    write /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy 1
-#    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_down_factor 4
-#    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 10
-#    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_multi_core 60
-#    write /sys/devices/system/cpu/cpufreq/ondemand/down_differential_multi_core 3
-#    write /sys/devices/system/cpu/cpufreq/ondemand/optimal_freq 918000
-#    write /sys/devices/system/cpu/cpufreq/ondemand/sync_freq 1026000
-#    write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold_any_cpu_load 80
-
-    # interactive
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
-
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 384000
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_min_freq 384000
-    write /dev/cpuctl/apps/cpu.notify_on_migrate 1
-
-    write /sys/devices/system/cpu/cpu0/cpufreq/thermal_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu0/cpufreq/sys_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu1/cpufreq/thermal_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu1/cpufreq/sys_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu2/cpufreq/thermal_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu2/cpufreq/sys_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu3/cpufreq/thermal_cap_freq 1728000
-    write /sys/devices/system/cpu/cpu3/cpufreq/sys_cap_freq 1728000
-
-    write /sys/module/msm_thermal/core_control/enabled 1
 
 on charger
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait ro barrier=1
@@ -743,6 +569,15 @@ service qcom-sh /system/bin/sh /init.qcom.sh
     class late_start
     user root
     oneshot
+
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+    class late_start
+    user root
+    disabled
+    oneshot
+
+on property:sys.boot_completed=1
+    start qcom-post-boot
 
 service hdmid /system/bin/hdmid
     class late_start
