"Add TWHAVE_SELINUX to build selinux supprt cwm"  revert recovery fstab vertions to API 2
Signed-off-by: sndnvaps <sndnvaps@gmail.com>

--- a/init.rc
+++ b/init.rc
@@ -28,8 +28,8 @@ on init
     mkdir /external_sd 
     mount /tmp /tmp tmpfs
 
-    chown root shell /tmp
-    chmod 0775 /tmp
+    chown shell shell /tmp
+    chmod 0777 /tmp
 
     mkdir /mnt 0775 root system
     mkdir /storage 0050 root sdcard_r
