Switch to wcnss_service to initialize wifi
qcom's way to set the mac from userspace is much better.

Change-Id: I2099af79faa57e06dd42a10d7ef0cf0850e3c453

--- a/rootdir/ramdisk/init.target.rc
+++ b/rootdir/ramdisk/init.target.rc
@@ -184,6 +184,12 @@ service imsdatadaemon /system/bin/imsdatadaemon
     group ims radio wifi net_raw log qcom_diag net_admin
     disabled
 
+service wcnss-service /system/bin/wcnss_service
+    class main
+    user system
+    group system wifi radio
+    oneshot
+
 on property:sys.ims.QMI_DAEMON_STATUS=1
     start imsdatadaemon
 
